# help

devel/lib/pkgconfig/: test.pc
devel/share/test/cmake/: testConfig.cmake
src/test/: CMakeLists.txt
src/test/src/: listener.cpp  talker.cpp
